--- a/epc/Dockerfile
+++ b/epc/Dockerfile
@@ -6,6 +6,10 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update
 RUN apt-get install iputils-ping software-properties-common git wget psmisc net-tools vim zip sudo -y
 
+RUN apt-get install iputils-ping -y
+RUN apt-get install iptables -y
+RUN apt-get install kmod -y
+
 WORKDIR /root 
 RUN wget https://raw.githubusercontent.com/cly1213/oai/master/opencells-mods-20190923.tgz
 RUN tar xf opencells-mods-20190923.tgz
